Make web directory CodeSwing-compatibile
Not tested, commited from Github.dev

--- a/web/index.html
+++ b/web/index.html
@@ -131,6 +131,6 @@
 			</div>
 		</form>
 	</dialog>
-	<script type="text/javascript" src="main.js" defer></script>
+	<script type="text/javascript" src="script.js" defer></script>
 </body>
 </html>
