Allow to skip lines of text files when preparing web content for embedding
Not tested, commited via Github.dev

--- a/web/index.html
+++ b/web/index.html
@@ -131,6 +131,10 @@
 			</div>
 		</form>
 	</dialog>
+	<!-- PREPARE WEB ARDUINO SKIP OUTPUT BEGIN -->
+	<script type="text/javascript" src="https://unpkg.com/pretender@3.4.7/dist/pretender.bundle.js" defer></script>
+	<script type="text/javascript" src="pretending.js" defer></script>
+	<!-- PREPARE WEB ARDUINO SKIP OUTPUT END -->
 	<script type="text/javascript" src="script.js" defer></script>
 </body>
 </html>
